--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "web3.js",
+    "version": "v1.2.11-besu-subscribe",
     "private": true,
     "description": "Ethereum JavaScript API wrapper repository",
     "license": "LGPL-3.0",
